LPD-22758 Set JavaExecutable and JVM arguments to the same settings as the current JVM